# teachable-admin-api-python

./: README.md  pyproject.toml
src/teachable_public_api/: client.py  environment.py
src/teachable_public_api/core/: __init__.py  base_client.py
src/teachable_public_api/resources/v1/: resource_client.py
src/teachable_public_api/resources/v1/courses/: __init__.py  resource_client.py
src/teachable_public_api/resources/v1/enroll/: __init__.py  resource_client.py
src/teachable_public_api/resources/v1/pricing_plans/: __init__.py  resource_client.py
src/teachable_public_api/resources/v1/transactions/: __init__.py  resource_client.py
src/teachable_public_api/resources/v1/unenroll/: __init__.py  resource_client.py
src/teachable_public_api/resources/v1/users/: __init__.py  resource_client.py
src/teachable_public_api/resources/v1/webhooks/: __init__.py  resource_client.py
src/teachable_public_api/types/v1/courses/: models.py
src/teachable_public_api/types/v1/enroll/: models.py  params.py
src/teachable_public_api/types/v1/pricing_plans/: models.py
src/teachable_public_api/types/v1/transactions/: models.py
tests/: test_client.py
tests/resources/v1/courses/: test_resource_client.py
tests/resources/v1/enroll/: test_resource_client.py
tests/resources/v1/pricing_plans/: test_resource_client.py
tests/resources/v1/transactions/: test_resource_client.py
tests/resources/v1/unenroll/: test_resource_client.py
tests/resources/v1/users/: test_resource_client.py
tests/resources/v1/webhooks/: test_resource_client.py
(+35 files in other folders)
