[tool.poetry]
name = "teachable_public_api"
version = "0.0.1"
description = ""
readme = "README.md"
authors = []
packages = [{ include = "teachable_public_api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.21.2"
pydantic = ">= 1.9.2"
typing_extensions = ">= 4.0.0"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
